# source-monitor

./: .gitignore  BUILD-B-CONFABULATION.md  BUILD-C-GROUNDING.md  BUILD-HANDOFF.md  CONCEPTUAL-NOTES.md  FINDINGS.md  README.md  SEER-INTEGRATION.md  SPEC.md  WRITEUP.md  implementation_plan.md  implementation_plan_phase1.md  implementation_plan_phase2.md  implementation_plan_phase3.md  pyproject.toml  walkthrough.md
.serena/: project.yml
.trunk/: trunk.yaml
scripts/: _confab_calibrate.py  _math_probe.py  aggregate_phase0.py  aggregate_phase1.py  aggregate_phase2.py  diag_factual_copy.py  eval_excise.py  verify_gguf_logprobs.py
src/source_monitor/: __init__.py  amplification.py  blindspot.py  diagnose.py  experiments.py  f14_power.py  metrics.py  model.py  muon.py  task.py  train.py
src/source_monitor/llm/: __init__.py  cache.py  config.py  corruption.py  phase0.py  provenance.py  task_render.py  telemetry.py
src/source_monitor/llm/loop/: __init__.py  config.py  consistency.py  ensemble.py  f22_ensemble.py  f24_murmuration.py  f26_consistency.py  f26_sample.py  f27_router.py  monitor.py  paraphrase.py  phase3.py  router.py
src/source_monitor/llm/ood/: __init__.py  arithmetic.py  base.py  code_trace.py  entity_prose.py  factual_grounded.py  factual_qa.py  obscure_facts.py  phase1.py
tests/: test_consistency.py  test_corruption_text.py  test_ensemble.py  test_loop.py  test_model.py  test_ood.py  test_paraphrase.py  test_provenance_llm.py  test_router.py  test_surprise.py  test_task.py  test_task_render.py  test_telemetry_llm.py  test_train_holes.py
(+5 files in other folders)
