[project]
name = "source-monitor"
version = "0.1.0"
description = "Source monitoring as architecture: provenance tags + a learned admission gate on self-emitted tokens (anti-backtracking attention), tested on the sps-blindspot ghost harness"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = [
    "transformers>=4.51",
    "huggingface_hub>=0.25",
    "accelerate>=1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/source_monitor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
